@@ -1,4 +1,6 @@
 Version 1.10.2+svn:
+ * Editor:
+   * Improved performance of the Editor Settings ToD lighting controls
  * Language and i18n:
    * Updated translations:
 
